--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
@@ -18,6 +19,7 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "framer-motion": "^10.16.4",
     "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
     "postcss": "8.4.29",
