--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-giphy-searchbox": "^1.5.4",
+    "slate": "^0.94.1",
+    "slate-react": "^0.99.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
