--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.25.6",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.4.2",
     "@types/bcrypt": "^5.0.0",
