--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-giphy-searchbox": "^1.5.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "slate": "^0.94.1",
     "slate-react": "^0.99.0",
