--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.25.6",
+    "@clerk/nextjs": "^4.29.2",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.5.0",
     "@types/bcrypt": "^5.0.0",
@@ -20,12 +20,13 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "eslint-config-next": "^14.0.4",
     "framer-motion": "^10.16.4",
     "jsonwebtoken": "^9.0.2",
-    "next": "13.4.19",
+    "next": "^14.0.4",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-giphy-searchbox": "^1.5.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
