--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.29.2",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.5.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.5.9",
@@ -19,10 +20,14 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
+    "embla-carousel-react": "^8.0.0-rc19",
     "eslint-config-next": "^14.0.4",
     "framer-motion": "^10.16.4",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.314.0",
     "next": "^14.0.4",
     "postcss": "8.4.29",
     "react": "^18.2.0",
@@ -32,7 +37,9 @@
     "react-icons": "^4.11.0",
     "slate": "^0.94.1",
     "slate-react": "^0.99.0",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2"
   },
   "devDependencies": {
