--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.314.0",
     "next": "^14.0.4",
     "postcss": "8.4.29",
+    "prettier-plugin-tailwindcss": "^0.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-giphy-searchbox": "^1.5.4",
