--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@clerk/nextjs": "^4.29.2",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-query": "^5.40.1",
     "@types/aos": "^3.0.7",
     "@types/bcrypt": "^5.0.0",
