--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "next": "^14.0.4",
     "postcss": "8.4.29",
     "prettier-plugin-tailwindcss": "^0.6.1",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-giphy-searchbox": "^1.5.4",
