--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "prisma": "^5.17.0"
