--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-query": "^5.40.1",
+    "@tanstack/react-table": "^8.20.5",
     "@types/aos": "^3.0.7",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
