--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint-config-next": "^14.0.4",
     "framer-motion": "^10.16.4",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "lucide-react": "^0.314.0",
     "next": "^14.0.4",
     "postcss": "8.4.29",
