--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
     "embla-carousel-react": "^8.0.0-rc19",
-    "eslint-config-next": "^14.0.4",
+    "eslint-config-next": "^14.2.15",
     "framer-motion": "^10.16.4",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
@@ -58,6 +58,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "eslint": "^8.57.1",
     "prisma": "^5.17.0"
   }
 }
