--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "embla-carousel-react": "^8.0.0-rc19",
     "eslint-config-next": "^14.2.15",
     "framer-motion": "^10.16.4",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
