--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^7.1.1",
+    "@vercel/speed-insights": "^1.3.1",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
